Now can add and remove order items. Also fixed spacing between scripts.

--- a/Projects/ETravel.Coffee.UI.Site/Styles/Site.css
+++ b/Projects/ETravel.Coffee.UI.Site/Styles/Site.css
@@ -97,6 +97,7 @@
     float: right;
     font-size: 1.4em;
     padding-left: 10px;
+    display: none;
 }
 
 .login-display {
